Left with README.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Personal Portfolio Website</title>
 </head>
 <body>
-    <!--Scrolling Up Button-->
+    <!----------------------------------------------------------------Scrolling Up Button------------------------------------------------------------->
     <div class="scrollup-btn">
         <i class="fas fa-angle-double-up"></i>
     </div>
@@ -56,7 +56,7 @@
     </section>
 
 
-    <!-- About Me Section-->
+    <!----------------------------------------------------------------------- About Me Section------------------------------------------------------------------------------------------->
     <section class="about" id="about">
         <div class="max-width">
             <h2 class="title">About <span>Me</span></h2>
@@ -153,7 +153,7 @@
                 <div class="card3">
                     <div class="box3">
                        <img src="images/GPA-Award.jpg">
-                       <div class="text">Great Progress Award 2016</div>
+                       <div class="text">GPA 2016</div>
                        <p>The Edusave Good Progress Award (GPA) is given to students who are within the top 10% of their level and course in terms of improvement in their academic performance, and have demonstrated good conduct.</p>
                    </div>
                 </div>
@@ -252,6 +252,13 @@
             </div>
         </div>
     </section>
+
+    <!--------------------------------------- Footer Section------------------------------------------>
+    <footer>
+        <span>Copyright <span class="far fa-copyright"></span> 2021 Chua Cheng Xuan. All Rights Reserved.</span>
+    </footer>
+
+
 
     <script src="script.js"></script>
 
