--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 
-    <!---->
+    <!------------------------------------------------------------------------------------------------------------ Tools ----------------------------------------------------------------------------------------------------------------------->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -37,7 +37,7 @@
                 <li><a href="#award" class="menu-btn">Awards</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
-            <!--Pop Out Menu Button-->
+            <!----------------------------------------------------------------------------------------------Pop Out Menu Button-------------------------------------------------------------------------------------------------------->
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
             </div>
@@ -146,7 +146,7 @@
             <div class="slide owl-carousel">
                 <div class="card3">
                     <div class="box3">
-                        <img src="images/NYAA-Silver.jpg">
+                        <img src="images/NYAA-Silver.jpg" alt="">
                         <div class="text">NYAA Silver 2018</div>
                         <p>The National Youth Achievement Award (NYAA) aims to encourage young people between the age of 13 and 30 years to contribute to our society and nation. Requires a minimum period of 12 months of involvment to attain Silver level.</p>
                     </div>
@@ -154,7 +154,7 @@
 
                 <div class="card3">
                     <div class="box3">
-                       <img src="images/GPA-Award.jpg">
+                       <img src="images/GPA-Award.jpg" alt="">
                        <div class="text">GPA 2016</div>
                        <p>The Edusave Good Progress Award (GPA) is given to students who are within the top 10% of their level and course in terms of improvement in their academic performance, and have demonstrated good conduct.</p>
                    </div>
@@ -162,7 +162,7 @@
 
                 <div class="card3">
                     <div class="box3">
-                        <img src="images/EDU-2020.jpg">
+                        <img src="images/EDU-2020.jpg" alt="">
                         <div class="text">Edusave Merit Bursary 2020</div>
                         <p>The Edusave Merit Bursary (EMB) is given to students from more modest backgrounds who are within the top 25% of their level and course in terms of academic performance, and have demonstrated good conduct.</p>
                     </div>
@@ -170,7 +170,7 @@
 
                 <div class="card3">
                     <div class="box3">
-                       <img src="images/EDU-2021.jpg">
+                       <img src="images/EDU-2021.jpg" alt="">
                        <div class="text">Edusave Merit Bursary 2021</div>
                        <p>The Edusave Merit Bursary (EMB) is given to students from more modest backgrounds who are within the top 25% of their level and course in terms of academic performance, and have demonstrated good conduct.</p>
                    </div>
@@ -250,12 +250,12 @@
         </div>
     </section>
 
-    <!--------------------------------------- Footer Section------------------------------------------>
+    <!------------------------------------------------------------------------------------------- Footer Section------------------------------------------------------------------------------------------------------------------->
     <footer>
         <span>Copyright <span class="far fa-copyright"></span> 2021 Chua Cheng Xuan. All Rights Reserved.</span>
         <a href="https://sg.linkedin.com/in/chua-cheng-xuan-2a1721211"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/CHUAGAYGAY"><i3 class="fab fa-github"></i></a>
-        <a href="https://www.instagram.com/changxunchuas/"><i2 class="fab fa-instagram"></i></a>
+        <a href="https://github.com/CHUAGAYGAY"><i2 class="fab fa-github"></i2></a>
+        <a href="https://www.instagram.com/changxunchuas/"><i3 class="fab fa-instagram"></i2></a>
     </footer>
     
     <script src="script.js"></script>
