--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-----------------------------------------------------------------------------------------------CSS Stylesheets Reference---------------------------------------------------------------------------------->
-    <link rel="stylesheet" href="../ID_S10227853A_Chua Cheng Xuan_Assg1_website/css/normalize.css">
-    <link rel="stylesheet" href="../ID_S10227853A_Chua Cheng Xuan_Assg1_website/css/style.css">
+    <link rel="stylesheet" href="../normalize.css">
+    <link rel="stylesheet" href="../style.css">
 
     <!------------------------------------------------------------------------------------------------------------ Tools ----------------------------------------------------------------------------------------------------------------------->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -64,7 +64,7 @@
             <h2 class="title">About <span>Me</span></h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="../ID_S10227853A_Chua Cheng Xuan_Assg1_website/images/IMG_20190309_190932.jpg" alt="">
+                    <img src="images/IMG_20190309_190932.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">Know More About <span>Me</span></div>
@@ -146,7 +146,7 @@
             <div class="slide owl-carousel">
                 <div class="card3">
                     <div class="box3">
-                        <img src="../ID_S10227853A_Chua Cheng Xuan_Assg1_website/images/NYAA-Silver.jpg" alt="">
+                        <img src="images/NYAA-Silver.jpg" alt="">
                         <div class="text">NYAA Silver 2018</div>
                         <p>The National Youth Achievement Award (NYAA) aims to encourage young people between the age of 13 and 30 years to contribute to our society and nation. Requires a minimum period of 12 months of involvment to attain Silver level.</p>
                     </div>
@@ -154,7 +154,7 @@
 
                 <div class="card3">
                     <div class="box3">
-                       <img src="../ID_S10227853A_Chua Cheng Xuan_Assg1_website/images/GPA-Award.jpg" alt="">
+                       <img src="images/GPA-Award.jpg" alt="">
                        <div class="text">GPA 2016</div>
                        <p>The Edusave Good Progress Award (GPA) is given to students who are within the top 10% of their level and course in terms of improvement in their academic performance, and have demonstrated good conduct.</p>
                    </div>
@@ -162,7 +162,7 @@
 
                 <div class="card3">
                     <div class="box3">
-                        <img src="../ID_S10227853A_Chua Cheng Xuan_Assg1_website/images/EDU-2020.jpg" alt="">
+                        <img src="images/EDU-2020.jpg" alt="">
                         <div class="text">Edusave Merit Bursary 2020</div>
                         <p>The Edusave Merit Bursary (EMB) is given to students from more modest backgrounds who are within the top 25% of their level and course in terms of academic performance, and have demonstrated good conduct.</p>
                     </div>
@@ -170,7 +170,7 @@
 
                 <div class="card3">
                     <div class="box3">
-                       <img src="../ID_S10227853A_Chua Cheng Xuan_Assg1_website/images/EDU-2021.jpg" alt="">
+                       <img src="images/EDU-2021.jpg" alt="">
                        <div class="text">Edusave Merit Bursary 2021</div>
                        <p>The Edusave Merit Bursary (EMB) is given to students from more modest backgrounds who are within the top 25% of their level and course in terms of academic performance, and have demonstrated good conduct.</p>
                    </div>
@@ -258,7 +258,7 @@
         <a href="https://www.instagram.com/changxunchuas/"><i3 class="fab fa-instagram"></i2></a>
     </footer>
     
-    <script src="../ID_S10227853A_Chua Cheng Xuan_Assg1_website/js/script.js"></script>
+    <script src="../script.js"></script>
 
 </body>
 </html> 
