--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-----------------------------------------------------------------------------------------------CSS Stylesheets Reference---------------------------------------------------------------------------------->
-    <link rel="stylesheet" href="../normalize.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!------------------------------------------------------------------------------------------------------------ Tools ----------------------------------------------------------------------------------------------------------------------->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
