Changes to CSS Reference and Javascript Reference

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <a href="https://www.instagram.com/changxunchuas/"><i3 class="fab fa-instagram"></i2></a>
     </footer>
     
-    <script src="../script.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 </html> 
